2008-02-02 François Agrech <f.agrech@gmail.com>
	* ChangeLog start