@@ -19,14 +19,18 @@
 #
 
 [Settings]
-ShowOnEditable=true
-AutoClick=1300
+# Set to true to make the keyboard visible only editable widget is focused 
+ShowOnEditable=false
+# AutoClick : timeout before the key is pressed when mouse is over.
+# 0 = no autoclick
+AutoClick=2000
 
 [Window]
-Shaped=true
+Shaped=false
+zoom=10
+# Depends on layout
 width=30
 height=10
-zoom=10
 
 [Colors]
 Text=white
@@ -36,6 +40,8 @@ Activated=red
 MouseOver=blue
 
 [Labels]
+# keycode=label
+# Will be printed on the key
 37=Ctrl
 64=Alt
 109=Ctrl
@@ -44,6 +50,7 @@ MouseOver=blue
 116=Super
 
 [Layout]
+# keycode=xpos;ypos;width (default=2);height (default=2)
 49=1;1
 10=3;1
 11=5;1
